--- a/style.css
+++ b/style.css
@@ -13,8 +13,6 @@
     height: 500px;
     vertical-align: middle;
     margin-right: 50px;
-
-
 }
 .container1 h1{
     font-size: 20px;
@@ -39,26 +37,19 @@
     height: 500px;
     vertical-align: middle;
     margin-left: 50px;
-
-
-
 }
 .container2 div{
-
     display: flex;
     justify-content: space-between;    
     margin: 15px;
-
-
-
 }
 .container2 div p {
-
 background-color: rgb(215, 182, 182);
 width: 90px;
 border-radius: 7%;
 }
 
+/* this is the css for the menu */
 .menu-main{
     max-width: 1200px;
     margin: 0 auto;
