--- a/style.css
+++ b/style.css
@@ -8,23 +8,25 @@
 .container1{
     display: inline-block;
     border: 5px solid black;
+    border-radius: 10%;
     background-color: rgb(255, 255, 255);
-    width: 40%;
+    width: 30%;
     height: 500px;
     vertical-align: middle;
     margin-right: 50px;
+    
 
 
 }
 .container1 h1{
     font-size: 20px;
-     color: rgb(0, 0, 0);
+     color: cyan);
 
 
 
 }
 .container1 h3{
-   
+   color: cyan;
 
 }
 .container1 p{
@@ -34,8 +36,9 @@
 .container2{
     display: inline-block;
     border: 5px solid black;
+    border-radius: 10%;
     background-color: white;
-    width: 40%;
+    width: 30%;
     height: 500px;
     vertical-align: middle;
     margin-left: 50px;
@@ -58,5 +61,10 @@ background-color: rgb(215, 182, 182);
 width: 90px;
 border-radius: 7%;
 
+
+
+}
+.container2 select{
+height: 40px;
 
 }
