--- a/style.css
+++ b/style.css
@@ -1,20 +1,23 @@
 /* this is the css for the booking page */
+@media screen {
+    
+}
 .containers{
     border: 1px solid black;
-  margin: 1rem;
+  /* margin: 1rem; */
   padding: 2rem 2rem;
+  align-items: center;
   text-align: center;
 }
 .container1{
     display: inline-block;
-    border: 5px solid black;
-    border-radius: 10%;
+    /* border: 5px solid black; */
     background-color: black;
     width: 30%;
     height: 500px;
     vertical-align: middle;
-    margin-right: 50px;
-    outline: 2px cyan dashed;
+    /* margin-right: 50px; */
+    outline: 2px yellow dashed;
     outline-offset:  -15px;
 
 }
@@ -35,15 +38,16 @@
 }
 .container2{
     display: inline-block;
-    border: 5px solid black;
-    border-radius: 10%;
-    background-color: black;
+    /* border: 5px solid black; */
+    /* background-color: black; */
+    box-shadow:  0px 2px 38px black;
+    
     width: 30%;
     height: 500px;
     vertical-align: middle;
-    margin-left: 50px;
-    outline: 2px cyan dashed;
-    outline-offset:  -15px;
+    /* margin-left: 50px; */
+    /* outline: 2px orange dashed;
+    outline-offset:  -15px; */
 }
 .container2 div{
     display: flex;
@@ -55,7 +59,7 @@
     color: orange;
 }
 .container2 div p {
-    color: cyan;
+    color: orange;
 width: 90px;
 border-radius: 7%;
 }
