--- a/style.css
+++ b/style.css
@@ -61,12 +61,13 @@
 width: 90px;
 border-radius: 7%;
 }
-.container2 input{
-height: 35px
+.container2 input , .container2 select{
+        height: 40px;
+        outline: none;
+        border: none;
+        border-bottom:  1px solid black;
 
-}
-.container2 select{
-    height: 40px;
+
 }
 
 
@@ -148,13 +149,21 @@ font-family: sans-serif;
 
     }
     .containers div{
-        width: 500px;
+        width: 300px;
 
 
     }
-    .container2 input{
-        width : 60px;
+    .container2{
 
+        margin: 0;
+        padding: 0;
+    }
+    .container2 input , .container2 select{
+        width : 70px;
+        margin-right: 30px;
+        outline: none;
+        border: none;
+        border-bottom:  1px solid black;
     }
     
 }
