--- a/style.css
+++ b/style.css
@@ -1,23 +1,17 @@
 /* this is the css for the booking page */
-body{
-    background: url(https://images.unsplash.com/photo-1484156818044-c040038b0719?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1170&q=80);
-    background-repeat: no-repeat;
-    background-attachment: fixed;
-    background-size: cover;
-}
+
 .containers{
     /* border: 1px solid black; */
     /* background-image: url(https://images.unsplash.com/photo-1484156818044-c040038b0719?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1170&q=80); */
   /* margin: 1rem; */
-  padding: 2rem 2rem;
+  padding: 0rem 2rem;
   align-items: center;
   text-align: center;
 }
 .container1{
     display: inline-block;
-    /* border: 5px solid black; */
     background-color: black;
-    width: 30%;
+    width: 40%;
     height: 500px;
     vertical-align: middle;
     /* margin-right: 50px; */
@@ -40,6 +34,21 @@ body{
 
     color: white;
 }
+.imgg{
+    background-image: url(https://images.unsplash.com/photo-1484156818044-c040038b0719?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1170&q=80);
+    display: inline-block;
+    /* border: 5px solid black; */
+    /* background-color: black; */
+    box-shadow:  0px 2px 38px black;
+    background-color: white;
+    
+    width: 40%;
+    height: 500px;
+    vertical-align: middle;
+
+
+
+}
 .container2{
     display: inline-block;
     /* border: 5px solid black; */
@@ -47,8 +56,8 @@ body{
     box-shadow:  0px 2px 38px black;
     background-color: white;
     
-    width: 30%;
-    height: 500px;
+    width: 80%;
+    height: 550px;
     vertical-align: middle;
     /* margin-left: 50px; */
     /* outline: 2px orange dashed;
@@ -56,7 +65,7 @@ body{
 }
 .container2 div{
     display: flex;
-    justify-content: space-between;    
+    justify-content: space-around;
     margin: 15px;
 }
 .container2 h1{
@@ -65,8 +74,8 @@ body{
 }
 .container2 div p {
     color: orange;
-width: 90px;
-border-radius: 7%;
+    font-size: 18px;
+width: 200px;
 }
 .container2 input , .container2 select{
         height: 40px;
@@ -76,7 +85,24 @@ border-radius: 7%;
 
 
 }
+.container2 button{
+    background-color: orange;
+    width: 30%;
+    height: 30px;
 
+
+
+border: none;
+outline: none;
+
+
+}
+.container2 button:hover{
+    background:#fff;
+    box-shadow:0px 2px 10px 5px #97B1BF;
+    color:#000;
+ }
+ 
 
 /* this is the css for the menu */
 .menu-main{
@@ -148,6 +174,11 @@ font-family: sans-serif;
    
 }
 @media screen and (max-width :995px) {
+    .imgg{
+
+        width: 0;
+        height: 0;
+    }
     .containers{
         width: 100%;
         display: grid;
