--- a/style.css
+++ b/style.css
@@ -194,13 +194,21 @@ font-family: sans-serif;
 
     }
     .container2{
-
+        height: fit-content;
         margin: 0;
         padding: 0;
     }
+    .container2 div{
+           display: grid;
+        
+
+    }
+    .container2 button{
+
+        width: 100%;
+    }
     .container2 input , .container2 select{
-        width : 70px;
-        margin-right: 30px;
+        width : 90%;
         outline: none;
         border: none;
         border-bottom:  1px solid black;
