--- a/style.css
+++ b/style.css
@@ -17,8 +17,14 @@
     height: 500px;
     vertical-align: middle;
     /* margin-right: 50px; */
-    /* outline: 2px yellow dashed;
-    outline-offset:  -15px; */
+    outline: 2px yellow dashed;
+    outline-offset:  -30px ;
+    text-align: center;
+
+}
+.container1 div{
+margin: 50px;
+
 
 }
 .container1 h1{
@@ -77,10 +83,11 @@
 .container2 div p {
     color: orange;
     font-size: 18px;
-width: 200px;
+    width: 200px;
 }
 .container2 input , .container2 select{
         height: 40px;
+        width: 30%;
         outline: none;
         border: none;
         border-bottom:  1px solid black;
