--- a/style.css
+++ b/style.css
@@ -17,16 +17,12 @@
     height: 500px;
     vertical-align: middle;
     /* margin-right: 50px; */
-    outline: 2px yellow dashed;
-    outline-offset:  -30px ;
+    /* outline: 2px yellow dashed;
+    outline-offset:  -10px ; */
     text-align: center;
 
 }
-.container1 div{
-margin: 50px;
 
-
-}
 .container1 h1{
     font-size: 20px;
      color: white;
@@ -49,7 +45,7 @@ margin: 50px;
     /* background-color: black; */
     box-shadow:  0px 2px 38px black;
     background-color: white;
-    
+
     width: 40%;
     height: 500px;
     vertical-align: middle;
@@ -63,7 +59,7 @@ margin: 50px;
     /* background-color: black; */
     box-shadow:  0px 2px 38px black;
     background-color: white;
-    
+
     width: 80%;
     height: 550px;
     vertical-align: middle;
@@ -99,7 +95,7 @@ margin: 50px;
   animation: pulse 1s;
   box-shadow:0px 2px 0px 0px black;
   color:#000;
-    
+
 }
 
 .container2 select option{
@@ -129,7 +125,7 @@ margin: 50px;
   0% { box-shadow: 0 0 0 0 var(--hover); }
 }
 
- 
+
 
 /* this is the css for the menu */
 .menu-main{
@@ -198,7 +194,7 @@ font-family: sans-serif;
         height: 125px;
         width: 125px;
     }
-   
+
 }
 @media screen and (max-width :995px) {
     .imgg{
@@ -209,7 +205,7 @@ font-family: sans-serif;
     .containers{
         width: 100%;
         display: grid;
-        align-items: center;    
+        align-items: center;
         justify-content: center;
 
     }
@@ -225,7 +221,7 @@ font-family: sans-serif;
     }
     .container2 div{
            display: grid;
-        
+
 
     }
     .container2 button{
@@ -238,5 +234,5 @@ font-family: sans-serif;
         border: none;
         border-bottom:  1px solid black;
     }
-    
+
 }
