--- a/indes-style.css
+++ b/indes-style.css
@@ -23,12 +23,13 @@ This style sheet contains:
     align-items: center;
     position: absolute;
     margin:0;
+    background-color: #707B7C;
     padding: 0 100px;
     top:0;
     left:0;
     box-sizing: border-box;
     width: 100%;
-    height: 60px;
+    height: 70px;
     border-bottom: 3px solid rgb(44, 63, 44);
 }
 
@@ -46,6 +47,7 @@ This style sheet contains:
 }
 header a{
     text-decoration: none;
+    color: #ECF0F1;
 }
 .menu-toggle i{
     font-size:24px;
@@ -60,13 +62,17 @@ header nav ul li a.active
     color: white;
     background-color: rgb(17, 58, 105);
 }
-/**/
+.fix {
+    height: 70px;
+}
+/*her are contian attributes*/
 .contain{
     height: 500px;
     width: 100%;
     background-color: bisque;
-
 }
+
+/* Here */
 .footer-info{
     background-color: black;
     color : white;
