--- a/indes-style.css
+++ b/indes-style.css
@@ -58,8 +58,7 @@ header nav ul li a.active
     display: none;
     color: white;
 }
-@media(max-width: 991px)
-{    
+@media(max-width: 991px){    
     header{
         padding:0 20px;
     }
