--- a/indes-style.css
+++ b/indes-style.css
@@ -20,7 +20,7 @@ This style sheet contains:
 
 header {
     position: absolute;
-    padding: 0 100px;
+    padding: 0 50px;
     width: 100%;
     background-color: #95A5A6;
 }
@@ -105,6 +105,8 @@ header nav ul li a.active
     }
     header nav ul li a{
         border-bottom: 1px solid black;
+        color: #ECF0F1 ;
+        font-size: 0.8rem;
     }
     .cont{
         margin-top: 80px;
@@ -112,10 +114,11 @@ header nav ul li a.active
     }
     .footer-info{
         grid-template-columns: 1fr 1fr;
+        row-gap: 50px;
     }
     
 }
-@media(max-width: 500px){
+@media(max-width: 580px){
     header{
         padding:0 20px;
     }
@@ -132,7 +135,7 @@ header nav ul li a.active
         transition: 0.5s;
     }
     header nav ul il a{
-        font-size: 0.5erm;
+        font-size: 0.5rem;
     }
     header nav.active{
         left: 0;
