--- a/indes-style.css
+++ b/indes-style.css
@@ -60,7 +60,7 @@ header nav ul li a.active
 
 /* Here are the style attributes for footer */
 .footer-info{
-    background-color: black;
+    background-color: #2C2421;
     color : white;
     padding: 30px;
     font-size: 1.5erm;
@@ -89,8 +89,15 @@ header nav ul li a.active
 }
 .Social-media a i {
     color: white;
-    margin: 10px;
+    margin: 5px 10px 10px 0;
     font-size: 1.5rem;
+    display: inline-block;
+    background-color: #5d6d7e7b;
+    height: 50px;
+    width: 50px;
+    text-align: center;
+    line-height: 50px;
+    border-radius: 100%;
 }
 
 
