--- a/indes-style.css
+++ b/indes-style.css
@@ -14,6 +14,10 @@ This style sheet contains:
     list-style: none;
 }
 
+.body{
+    height: auto;
+}
+
 
 
 /* Here are the header style attributes */
@@ -66,6 +70,7 @@ header nav ul li a.active
     font-size: 1.5erm;
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
+    font-family: Arial, Helvetica, sans-serif;
 }
 .map-info{
    height: 100px; 
@@ -86,6 +91,7 @@ header nav ul li a.active
 .Social-media{
     display: flex;
     margin: 0 auto;
+
 }
 .Social-media a i {
     color: white;
@@ -103,7 +109,7 @@ header nav ul li a.active
 
   /* the media sittings for*/
 
-@media(max-width: 900px){    
+@media screen and (max-width: 900px){    
     header{
         padding:0 20px;
     }
@@ -141,7 +147,7 @@ header nav ul li a.active
     }
     
 }
-@media(max-width: 580px){
+@media screen and (max-width: 580px){
     header{
         padding:0 20px;
     }
