--- a/style.css
+++ b/style.css
@@ -38,13 +38,13 @@
     color: white;
 }
 .imgg{
-    background-image: url(https://images.unsplash.com/photo-1484156818044-c040038b0719?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1170&q=80);
+    /* background-image: url(https://images.unsplash.com/photo-1484156818044-c040038b0719?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1170&q=80); */
     display: inline-block;
     /* border: 5px solid black; */
     /* background-color: black; */
     box-shadow:  0px 2px 38px black;
     background-color: white;
-
+     overflow: hidden;
     width: 40%;
     height: 500px;
     vertical-align: middle;
@@ -52,6 +52,74 @@
 
 
 }
+.slidess{
+    position: absolute;
+    top: 30%;
+    left: 30%;
+    transform: translate(30%,30%);
+
+}
+.nav{
+
+    position: absolute;
+    bottom: 39%;
+    left:69%;
+    transform: translateX(-50%);
+    display: flex;
+
+}
+.bar{
+    width: 20px;
+    height: 20px;
+    margin: 6px;
+    border: 2px solid black;
+    border-radius: 50%;
+    transition: 0.4s;
+    cursor: pointer;
+}
+.bar:hover{
+    background: white;
+
+
+}
+input[name="b"]{
+
+    position: absolute;
+    visibility: hidden;
+}
+.slides{
+    width: 500%;
+    height: 100%;
+    display: flex;
+}
+.slide{
+    width: 50%;
+    transition: 0.6s;
+
+}
+
+.slide img{
+    width: 100%;
+    height: 100%;
+}
+#b:checked ~ .s1{
+margin-right: 0;
+
+}
+#b1:checked ~ .s1{
+    margin-right: 25%;
+    
+    }
+    #b2:checked ~ .s1{
+        margin-right: 50%;
+        
+        }
+        #b3:checked ~ .s1{
+            margin-right: 75%;
+            
+            }
+                        
+
 .container2{
     display: inline-block;
     /* border: 5px solid black; */
@@ -202,7 +270,7 @@ font-family: sans-serif;
         height: 0;
     }
     .containers{
-        width: 100%;
+        width: 90%;
         display: grid;
         align-items: center;
         justify-content: center;
