--- a/style.css
+++ b/style.css
@@ -192,77 +192,6 @@ margin-right: 0;
   0% { box-shadow: 0 0 0 0 var(--hover); }
 }
 
-
-
-/* this is the css for the menu */
-.menu-main{
-    max-width: 1200px;
-    margin: 0 auto;
-    padding: 1.5em;
-}
-
-.menu-header{
-text-align: center;
-font-family: sans-serif;
-}
-
-.menu{
-    font-family: sans-serif;
-    font-size: 14px;
-}
-
-.menu-group-heading{
-    margin: 0;
-    padding-bottom: 1em;
-    border-bottom: 2px solid #ccc;
-}
-
-.menu-group{
-    display: grid;
-    grid-template-columns: 1fr;
-    gap: 1.5em;
-    padding: 1.5em 0;
-}
-
-.menu-item{
-    display: flex;
-}
-
-.menu-item-img{
-    height: 80px;
-    width: 80px;
-    flex-shrink: 0;
-    object-fit: cover;
-    margin-right: 1.5em;
-}
-.menu-item-text{
-    flex-grow: 1;
-}
-.menu-item-heading{
-    display: flex;
-    justify-content: space-between;
-    margin: 0;
-}
-.menu-item-name{
-    margin-right: 1.5em;
-}
-.menu-item-description{
-    line-height: 1.6;
-}
-
-@media screen and (min-width: 992px){
-    .menu{
-        font-size: 16px;
-    }
-    .menu-group{
-        grid-template-columns: repeat(2, 1fr);
-    }
-    .menu-item-img{
-        height: 125px;
-        width: 125px;
-    }
-
-}
 @media screen and (max-width :995px) {
     .imgg{
 
@@ -303,3 +232,86 @@ font-family: sans-serif;
     }
 
 }
+
+
+
+/* this is the css for the menu */
+body{
+    background-color: bisque;
+}
+.menu-main{
+    max-width: 1200px;
+    margin: 0 auto;
+    padding: 1.5em;
+}
+
+.menu-header{
+text-align: center;
+font-family: sans-serif;
+}
+
+.menu{
+    font-family: sans-serif;
+    font-size: 14px;
+}
+
+.menu-group-heading{
+    margin: 0;
+    padding-bottom: 1em;
+    border-bottom: 2px solid #333;
+}
+
+.menu-group{
+    display: grid;
+    grid-template-columns: 1fr;
+    gap: 1.5em;
+    padding: 1.5em 0;
+}
+
+.menu-item{
+    display: flex;
+}
+
+/* image costumisation code taken from https://www.w3schools.com/howto/howto_css_rounded_images.asp and https://www.w3schools.com/howto/howto_css_border_image.asp */
+.menu-item-img{
+    height: 80px;
+    width: 80px;
+    flex-shrink: 0;
+    object-fit: cover;
+    margin-right: 1.5em;
+    border: 5px solid;
+    border-radius: 20%;
+    border-color: #333;
+}
+/* makes sure the text grows with the rest of the page https://www.w3schools.com/cssref/css3_pr_flex-grow.php */
+.menu-item-text{
+    flex-grow: 1;
+}
+.menu-item-heading{
+    display: flex;
+    justify-content: space-between;
+    margin: 0;
+}
+.menu-item-name{
+    margin-right: 1.5em;
+}
+.menu-item-description{
+    line-height: 1.6;
+}
+
+/* this is the widescreen details for menu*/
+@media screen and (min-width: 992px){
+    .menu{
+        font-size: 16px;
+    }
+    .menu-group{
+        grid-template-columns: repeat(2, 1fr);
+    }
+    .menu-item-img{
+        height: 125px;
+        width: 125px;
+    }
+
+}
+
+
