nav bar html added

--- a/style.css
+++ b/style.css
@@ -239,6 +239,7 @@ margin-right: 0;
 /* this is the css for the menu */
 body{
 color: #212F3D;
+background-color: #d7dbdd52;
 font-family: 'Poppins', sans-serif;
 }
 .menu-main{
