--- a/style.css
+++ b/style.css
@@ -243,9 +243,10 @@ background-color: #d7dbdd52;
 font-family: 'Poppins', sans-serif;
 }
 .menu-main{
-    max-width: 1200px;
+    max-width: 1300px;
     margin: 0 auto;
     padding: 1.5em;
+    box-shadow: 0px 0px 18px rgb(14 52 54 / 20%);
 }
 
 .menu-header{
@@ -305,8 +306,6 @@ text-align: center;
     font-style: italic;
     opacity: 80%;
 }
-
-/* this is the widescreen details for menu*/
 @media screen and (min-width: 992px){
     .menu{
         font-size: 16px;
