--- a/style.css
+++ b/style.css
@@ -2,23 +2,33 @@
 /* this is the css for the booking page */
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&family=Roboto+Condensed:wght@300&display=swap%27');
 
+:root{
+    --maim-color : #212F3D;
+    --second-color : #192f6a;
+    --text-color : #ECF0F1;
+    --second-text-color: #273746;
+    --bg-color: #d7dbdd52 ;
+    --second-bg-color : #FDFEFE;
+    --third-bg-color: #2C3E50;
+    /* Box Shadow*/
+    --box-shadow : 2px 2px 18px rgb(14 52 54 / 20%); 
+    --second-box-shadow: 0px 0px 18px rgb(14 52 54 / 20%);
+}
+
+
 .containers{
-    /* border: 1px solid black; */
-    /* background-image: url(https://images.unsplash.com/photo-1484156818044-c040038b0719?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1170&q=80); */
-  /* margin: 1rem; */
+    width: 100%;
   padding: 0rem 2rem;
   align-items: center;
   text-align: center;
 }
 .container1{
     display: inline-block;
-    background-color: black;
+    background-color: var(--third-bg-color);
     width: 40%;
     height: 500px;
     vertical-align: middle;
-    /* margin-right: 50px; */
-    /* outline: 2px yellow dashed;
-    outline-offset:  -10px ; */
+    
     text-align: center;
 
 }
@@ -31,109 +41,41 @@
 
 }
 .container1 h3{
-   color: orange;
-
+color: var(--second-bg-color);
 }
 .container1 p{
 
-    color: white;
+color: var(--text-color)
+
 }
 .imgg{
-    /* background-image: url(https://images.unsplash.com/photo-1484156818044-c040038b0719?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1170&q=80); */
+    background-image: url(https://images.unsplash.com/photo-1484156818044-c040038b0719?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1170&q=80);
     display: inline-block;
-    /* border: 5px solid black; */
-    /* background-color: black; */
-    box-shadow:  0px 2px 38px black;
+    box-shadow:  0px 18px rgb(14 52 54 / 20%);
+    
     background-color: white;
-     overflow: hidden;
     width: 40%;
     height: 500px;
     vertical-align: middle;
 
 
 
-}
-.slidess{
-    position: absolute;
-    top: 30%;
-    left: 30%;
-    transform: translate(30%,30%);
-
-}
-.nav{
-
-    position: absolute;
-    bottom: 39%;
-    left:69%;
-    transform: translateX(-50%);
-    display: flex;
-
-}
-.bar{
-    width: 20px;
-    height: 20px;
-    margin: 6px;
-    border: 2px solid black;
-    border-radius: 50%;
-    transition: 0.4s;
-    cursor: pointer;
-}
-.bar:hover{
-    background: white;
 
 
 }
-input[name="b"]{
 
-    position: absolute;
-    visibility: hidden;
-}
-.slides{
-    width: 500%;
-    height: 100%;
-    display: flex;
-}
-.slide{
-    width: 50%;
-    transition: 0.6s;
-
-}
-
-.slide img{
-    width: 100%;
-    height: 100%;
-}
-#b:checked ~ .s1{
-margin-right: 0;
-
-}
-#b1:checked ~ .s1{
-    margin-right: 25%;
-    
-    }
-    #b2:checked ~ .s1{
-        margin-right: 50%;
-        
-        }
-        #b3:checked ~ .s1{
-            margin-right: 75%;
-            
-            }
-                        
 
 .container2{
     display: inline-block;
-    /* border: 5px solid black; */
-    /* background-color: black; */
-    box-shadow:  0px 2px 38px black;
+
+    box-shadow:   0px 18px rgb(14 52 54 / 20%);
+
     background-color: white;
 
     width: 80%;
     height: 550px;
     vertical-align: middle;
-    /* margin-left: 50px; */
-    /* outline: 2px orange dashed;
-    outline-offset:  -15px; */
+    
 }
 .container2 div{
     display: flex;
@@ -141,11 +83,14 @@ margin-right: 0;
     margin: 15px;
 }
 .container2 h1{
+    font-family: 'Poppins', sans-serif;
 
-    color: orange;
+    color: var(--second-color)
 }
 .container2 div p {
-    color: orange;
+    font-family: 'Poppins', sans-serif;
+
+    color: var(--second-color);
     font-size: 18px;
     width: 200px;
 }
@@ -155,13 +100,13 @@ margin-right: 0;
         width: 30%;
         outline: none;
         border: none;
-        border-bottom:  1px solid black;
+        border-bottom:  0px 18px rgb(14 52 54 / 20%);
 
 
 }
 .container2 select:hover, .container2 input:hover{
   animation: pulse 1s;
-  box-shadow:0px 2px 0px 0px black;
+  box-shadow:0px 2px rgb(14 52 54 / 20%);
   color:#000;
 
 }
@@ -171,8 +116,8 @@ margin-right: 0;
 }
 
 .container2 button{
-    background-color: orange;
-    box-shadow:  1px 1px 0  black;
+    background-color: var(--second-bg-color);
+    box-shadow:  0px 2px rgb(14 52 54 / 20%);
     width: 30%;
     height: 30px;
     border: none;
@@ -183,9 +128,9 @@ margin-right: 0;
 .container2 button:hover,
 .container2 button:focus {
   animation: pulse 1s;
-  box-shadow: 0 0 0 10em black transparent;
+  box-shadow: 0px 2px rgb(14 52 54 / 20%); transparent;
   background:#fff;
-  box-shadow:0px 2px 10px 5px #97B1BF;
+  box-shadow:0px 2px rgb(14 52 54 / 20%);;
   color:#000;
 }
 
