--- a/frist-page.css
+++ b/frist-page.css
@@ -154,7 +154,7 @@ Container consists of:
     margin-top: 10px;
 }
 .about-img {
-    background: url();
+    background: url(image/house/house1.jpg);
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
@@ -217,7 +217,7 @@ Container consists of:
     align-items: center;
 }
 .activities-img-1 {
-    background: url(/image/house/restaurant.jpg);
+    background: url(image/house/restaurant.jpg);
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
@@ -226,7 +226,7 @@ Container consists of:
     border-radius: 3rem 0 3rem 3rem;
 }
 .activities-img-2 {
-    background: url(/image/house/pexels-cottonbro-studio-6803523.jpg);
+    background: url(image/house/pexels-cottonbro-studio-6803523.jpg);
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
@@ -242,7 +242,7 @@ Container consists of:
 }
 .activities-img-3 {
     /* photo has been downloaded from https://www.pexels.com/photo/compound-lighted-with-string-lights-382297/*/
-    background: url(/image/house/pexels-salah-alawadhi-382297.jpg);
+    background: url(image/house/pexels-salah-alawadhi-382297.jpg);
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
@@ -251,7 +251,7 @@ Container consists of:
     border-radius: 3rem 0 3rem  3rem;
 }
 .activities-img-4 {
-    background: url(/image/house/pexels-pixabay-356065.jpg);
+    background: url(image/house/pexels-pixabay-356065.jpg);
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
@@ -286,16 +286,16 @@ Container consists of:
     border-radius: 2rem 0;
 }
 #Wedding{
-    background: url(/image/profile1.jpg)center / cover;
+    background: url(image/profile1.jpg)center / cover;
 }
 #Restaurant{
-    background: url(/image/profile2.jpg)center / cover;
+    background: url(image/profile2.jpg)center / cover;
 }
 #Party{
-    background: url(/image/profile1.jpg)center / cover;
+    background: url(image/profile1.jpg)center / cover;
 }
 #meeting{
-    background: url(/image/profile2.jpg)center / cover;
+    background: url(image/profile2.jpg)center / cover;
 }
 .overlay{
     position: absolute;
