--- a/home.css
+++ b/home.css
@@ -88,7 +88,7 @@ Container consists of:
     margin-top: 10px;
 }
 .about-img {
-    background: url(image/house/house1.jpg);
+    background: url(image/house1.jpg);
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
@@ -151,7 +151,7 @@ Container consists of:
     align-items: center;
 }
 .activities-img-1 {
-    background: url(image/house/restaurant.jpg);
+    background: url(image/restaurant.jpg);
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
@@ -160,7 +160,7 @@ Container consists of:
     border-radius: 3rem 0 3rem 3rem;
 }
 .activities-img-2 {
-    background: url(image/house/pexels-cottonbro-studio-6803523.jpg);
+    background: url(image/pexels-cottonbro-studio-6803523.jpg);
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
@@ -176,7 +176,7 @@ Container consists of:
 }
 .activities-img-3 {
     /* photo has been downloaded from https://www.pexels.com/photo/compound-lighted-with-string-lights-382297/*/
-    background: url(image/house/pexels-salah-alawadhi-382297.jpg);
+    background: url(image/pexels-salah-alawadhi-382297.jpg);
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
@@ -185,7 +185,7 @@ Container consists of:
     border-radius: 3rem 0 3rem  3rem;
 }
 .activities-img-4 {
-    background: url(image/house/pexels-pixabay-356065.jpg);
+    background: url(image/pexels-pixabay-356065.jpg);
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
