--- a/style.css
+++ b/style.css
@@ -186,7 +186,7 @@ color: #212F3D;
 background-color: #d7dbdd52;
 font-family: 'Poppins', sans-serif;
 }
-.menu-main{x    
+.menu-main{    
     max-width: 1300px;
     margin: 0 auto;
     padding: 1.5em;
