--- a/home.css
+++ b/home.css
@@ -154,7 +154,7 @@ Container consists of:
     margin-top: 10px;
 }
 .about-img {
-    background: url(image/house\ 1.jpg);
+    background: url(image/house1.jpg);
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
